# url-shortener

./: .dockerignore  .flake8  .gitignore  Dockerfile  README-SERVICES.md  README.md  SCALABILITY.md  docker-compose.yml  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt  sample.env
analytics-service/: Dockerfile  README.md  main.py  requirements.txt
app/: main.py
app/api/: endpoints.py
app/core/: analytics.py  id_generator.py  id_service.py  redis_client.py  setting.py  settings.py  worker_id.py
app/db/: models.py  session.py
app/middleware/: logging.py
benchmark/: .gitignore  Dockerfile  README.md  locustfile.py  requirements.txt  start-locust.sh
event-consumer/: Dockerfile  README.md  consumer.py  requirements.txt
migrations/: env.py
migrations/versions/: 2024_01_01_0000_add_snowflake_fields.py
nginx-config/: nginx.conf
tests/: README.md  conftest.py  test_integration.py  test_redirect_endpoint.py  test_shorten_endpoint.py
