[project]
name = "url-shortener"
version = "0.1.0"
description = "Production-ready URL shortening service with microservices architecture"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic-settings>=2.0.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
    "python-multipart>=0.0.6",
    "redis[hiredis]>=5.0.0",
    "aio-pika>=9.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "uvicorn[standard]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "flake8>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "env",
    ".env",
    "migrations/versions",
    "alembic",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
]
ignore = ["E203", "E501", "W503"]
max-complexity = 10
per-file-ignores = [
    "__init__.py:F401",
    "migrations/*:F401",
    "tests/*:S101",
]
show-source = true
statistics = true

